--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   </head>
   <body class="">
     <header class="">
-      <nav class="flex px-10 py-5 lg:px-20 lg:py-5 items-center place-content-between">
+      <nav class="flex px-8 py-4 lg:px-20 lg:py-5 items-center place-content-between">
         <div class="flex text-neutral-50">
-          <div class="tittle-wrapper flex items-center">
-           <img class="sm:w-10 sm:h-10 rounded-full w-6" src="/assets/img/foto-perfil.jpg">
-           <h6 class="pt-1 pl-3">Pablo Chandía</h6>
+          <div class="tittle-wrapper flex items-center gap-5">
+           <img class="sm:w-10 sm:h-10 rounded-full w-8">
+           <h6 class="">Pablo Chandía</h6>
           </div>
          </div>
          <div class="flex text-neutral-50">
            <ul class="flex gap-x-10 nav_ul">
-             <li>Home</li>
-             <li>About</li>
-             <li>Profile</li>
-             <li>Contact</li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">About</a></li>
+             <li><a href="#">Expertise</a></li>
+             <li><a href="#">Contact</a></li>
            </ul>
            <div id="burger-toggler" class="burger">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -29,7 +29,7 @@
            </div>
          </div>
       </nav>
-      <div id="sm-menu-ref" class="header__sm-menu flex place-content-end hidden">
+      <div id="sm-menu-ref" class="header__sm-menu place-content-end hidden">
         <ul class="sm-menu__ul justify-end text-end text-neutral-50 w-full">
           <li class="">
             <a class="py-3 pr-5 block">Home</a>
@@ -38,7 +38,7 @@
             <a class="py-3 pr-5 block">About</a>
           </li>
           <li class="">
-            <a class="py-3 pr-5 block">Profile</a>
+            <a class="py-3 pr-5 block">Experience</a>
           </li>
           <li class="">
             <a class="py-3 pr-5 block">Contact</a>
@@ -46,8 +46,300 @@
         </ul>
       </div>
     </header>
-    <main>
-
+    <main class="">
+      <div class="home-hero">
+        <div class="home-hero__content flex flex-col pt-16 md:pt-40 mx-12">
+          <h1 class="uppercase text-slate-50 text-center tracking-wide">Hey! I'm Pablo Chandía</h1>
+          <div class="home-hero__info mt-6">
+            <p class="text-slate-50 text-center body-large">
+            Enthusiastic, committed and energetic. I give my best in every 
+            project I participate in.         
+            </p>
+            </br> 
+            <hr>
+            </br> 
+            <p class="text-slate-50 text-center body-medium">
+              Junior Front End Developer</br>Support Engineering Level 2 Specialist.</br>
+            </p>
+          </div>
+          <div class="home-hero__btn-wrapper flex self-center my-16 md:my-28 xl:my-40">
+            <a class="block uppercase rounded px-8 py-4 navy-darker text-slate-50 tracking-wide">experience</a>
+          </div>
+        </div>
+      </div>
+      <div class="home-about white xl:px-28 px-16 text-center">
+        <div class="home-about__content flex flex-col py-4 mb-16">
+          <div class="tittle-big mt-16 uppercase tracking-widest">
+            <h3>About me</h3>
+          </div>
+          <p class="mt-16 mb-32 xl:px-96 px-12 body-large"> 
+            Here you will find more information about me, what I do, and my
+            current skills mostly in terms of programming and technology
+          </p>
+          <div class="home-about__main-wrapper flex place-content-between gap-32">
+            <div class="home-about__main basis-1/2">
+              <div class="tittle-large text-start mb-8">
+                Get to know me! 
+              </div>
+              <div class="home-about__details mt-4 text-start flex flex-col">
+                <p class="py-2">
+                  I'm a <strong>Frontend Web Developer</strong> building the
+                  Front-end of Websites and Web Applications that leads to the
+                  success of the overall product. Check out some of my work in the
+                  <strong>Projects</strong> section.
+                </p>
+                <p class="py-2 tracking-wide">
+                  I also like sharing content related to the stuff that I have
+                  learned over the years in <strong>Web Development</strong> so it
+                  can help other people of the Dev Community. Feel free to Connect
+                  or Follow me on my
+                  <a rel="noreferrer" href="https://linkedin.com/in/rammcodes" target="_blank">Linkedin</a>
+                  where I post useful content related to Web Development and
+                  Programming
+                </p>
+                <p class="py-2 tracking-wide">
+                  I'm open to <strong>Job</strong> opportunities where I can
+                  contribute, learn and grow. If you have a good opportunity that
+                  matches my skills and experience then don't hesitate to
+                  <strong>contact</strong> me.
+                </p>
+              </div>
+              <a class="block uppercase rounded px-8 py-4 navy-darker text-slate-50 mt-8 w-min tracking-wide">contact</a>
+            </div>
+            <div class="home-about__skills basis-1/2">
+              <div class="tittle-large text-start mb-8">
+                My Skills
+              </div>
+              <div class="home-about__details mt-4 text-start flex flex-col">
+                <div class="skills-wrapper flex flex-wrap">
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    HTML
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    CSS
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Javascript
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Typescript
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Sass
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Flexbox
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Bootstrap
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Tailwind
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Vite.js
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Terminal
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    GIT
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Github
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Responsive Design
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    SEO
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Figma
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    UX/UI
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    DevTools
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    Grid Layout
+                  </div>
+                  <div class="skills-wrapper__skills px-5 py-3 mr-3 mb-3 navy-light rounded-lg text-slate-50">
+                    SQL
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="home-expertise off-white xl:px-28 px-16 text-center">
+        <div class="home-expertise__content flex flex-col py-4">
+          <div class="tittle-big mt-16 uppercase tracking-widest">
+            <h3>experience</h3>
+          </div>
+          <p class="mt-16 mb-32 xl:px-96 px-12 body-large"> 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Commodo odio aenean sed adipiscing diam donec. Tellus in hac 
+            habitasse platea dictumst vestibulum rhoncus est. 
+          </p>
+          <div class="home-expertise__main-wrapper flex place-content-between gap-32">
+            <div class="home-expertise__main">
+              <div class="tittle-large text-start mb-8">
+                Extract
+              </div>
+              <div class="home-expertise__detail-wrapper flex flex-col lg:flex-row gap-8 mb-16">
+                <div class="home-expertise__details mt-4 text-start flex flex-col basis-1/3">
+                    <div class="relative rounded-xl overflow-auto p-8">
+                      <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-slate-800 dark:highlight-white/5">
+                        <img class="absolute -left-6 w-24 h-24 white shadow-lg " src="/assets/img/devhaus-logo.svg">
+                        <div class="flex flex-col py-5 pl-24">
+                          <strong class="text-slate-900 text-sm font-medium dark:text-slate-200">Camp student</strong>
+                          <span class="text-slate-500 text-sm font-medium dark:text-slate-400">Devhaus Leipzig, Germany</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5"></div>
+                    <p class="py-2">
+                      Devhaus Leipzig is a platform for aspiring and experienced 
+                      tech professionals to work on their craft.
+                      intensive full-time <strong>training program</strong>, developed to equip 
+                      people from various professional backgrounds with the 
+                      necessary skills to become a <strong>Junior Front-end Web Developer</strong>.
+                    </p>
+                    <p class="py-2 tracking-wide">
+                      The 23-week course is designed to provide students with the 
+                      ability to build web applications on their own and 
+                      confidently seek employment after graduation.
+                    </p>
+                    <p class="py-2 tracking-wide">
+                      Im currently attending Camp 9, which will end on July 5th.
+                    </p>
+                </div>
+                <div class="home-expertise__details mt-4 text-start flex flex-col basis-1/3">
+                  <div class="relative rounded-xl overflow-auto p-8">
+                    <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-slate-800 dark:highlight-white/5">
+                      <img class="absolute -left-6 w-24 h-24 navy-darker shadow-lg border-2 border-black border-solid p-2 rounded-full" src="/assets/img/BRAINNEST.png">
+                      <div class="flex flex-col py-5 pl-24">
+                        <strong class="text-slate-900 text-sm font-medium dark:text-slate-200">Camp student</strong>
+                        <span class="text-slate-500 text-sm font-medium dark:text-slate-400">Brainnest, Germany</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5"></div>
+                  <p class="py-2">
+                    The
+                    business management and training
+                    company headquartered in Bremen,
+                    Germany.
+                    
+                  </p>
+                  <p class="py-2 tracking-wide">
+                    Since
+                    2020 we offer a combination of
+                    expertise, proficiency, and commitment
+                    leveraging our deep industry
+                    experience, along with using analytical
+                    rigor to drive outstanding results for
+                    businesses We proudly provide top
+                    class consulting and training services for
+                    a wide range of industries around the
+                    world A well equipped team, advanced
+                    tools, and modern methodologies are
+                    some of what we correctly utilize to offer
+                    our clients what makes them the best in
+                    their fields
+                  </p>
+                  <p class="py-2 tracking-wide">
+                    This is a one
+                    month intensive training
+                    program offered by Brainnest that leads the
+                    theoretical and practical part. Besides the
+                    experience, training, connections, and
+                    exposure, this program brings a list of
+                    benefits that you might find very interesting
+                    and beneficial.
+                  </p>
+                </div>
+                <div class="home-expertise__details mt-4 text-start flex flex-col basis-1/3">
+                <div class="relative rounded-xl overflow-auto p-8">
+                  <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-slate-800 dark:highlight-white/5">
+                    <img class="absolute -left-6 w-24 h-24 white shadow-lg border-2 border-black border-solid p-1" src="/assets/img/tcg.png">
+                    <div class="flex flex-col py-5 pl-24">
+                      <strong class="text-slate-900 text-sm font-medium dark:text-slate-200">Front End Developer</strong>
+                      <span class="text-slate-500 text-sm font-medium dark:text-slate-400">TCG Chile, Chile</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5"></div>
+                <p class="py-2">
+                  TCG Chile was born from the need to create a web marketplace 
+                  system for trading Magic the Gathering cards. Currently there 
+                  are other renowned marketplaces around the world, however 
+                  in Latin America there is no provider of trading service so 
+                  it becomes the first start-up with a unique product in its 
+                  region in this category (Marketplace).
+                </p>
+                <p class="py-2 tracking-wide">
+                  The site is currently under development and is soon to be 
+                  launched.
+                </p>
+                <p class="py-2 tracking-wide">
+                  I am performing the work of Front End Developer since the 
+                  beginning of this project and in turn the planning and 
+                  implementation of this, I am responsible for the web 
+                  development of this project and the completion of the same.
+                </p>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="home-contact white xl:px-28 px-16 text-center">
+        <div class="home-contact__content flex flex-col py-4">
+          <div class="tittle-big mt-16 uppercase tracking-widest">
+            <h3>contact</h3>
+          </div>
+          <p class="mt-16 mb-32 xl:px-96 px-12 body-large"> 
+            If my profile has caught your attention, do not hesitate to contact 
+            me.
+          </p>
+          <div class="home-contact__main-wrapper gap-32">
+            <div class="home-contact__main">
+              <div class="tittle-large text-start mb-8">
+                Contact Form
+              </div>
+              <div class="home-contact__detail-wrapper flex flex-col lg:flex-row gap-8 place-content-center">
+                <div class="home-contact__details mt-4 text-start flex">
+                  <div class="contact__form-container">
+                    <form action="#" class="contact__form" method="post"><input type="hidden" name="form-name" value="form 1">
+                      <div class="contact__form-field flex flex-col mb-16">
+                        <label class="contact__form-label" for="name">Name</label>
+                        <input required="" placeholder="Enter Your Name" type="text" class="contact__form-input" name="name" id="name">
+                      </div>
+                      <div class="contact__form-field flex flex-col mb-16">
+                        <label class="contact__form-label" for="email">Email</label>
+                        <input required="" placeholder="Enter Your Email" type="email" class="contact__form-input" name="email" id="email">
+                      </div>
+                      <div class="contact__form-field flex flex-col mb-16">
+                        <label class="contact__form-label" for="message">Message</label>
+                        <textarea required="" cols="30" rows="10" class="contact__form-input" placeholder="Enter Your Message" name="message" id="message"></textarea>
+                      </div>
+                      <button type="submit" class="block uppercase rounded px-8 py-4 navy-darker text-slate-50 mt-8 w-min tracking-wide">
+                        Submit
+                      </button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
 
