--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </div>
         </div>
       </div>
-      <div class="home-about white xl:px-28 px-16 text-center">
-        <div class="home-about__content flex flex-col py-4 mb-16">
+      <div class="home-about white xl:px-28 px-16 text-center pb-16">
+        <div class="home-about__content flex flex-col py-4">
           <div class="tittle-big mt-16 uppercase tracking-widest">
             <h3>About me</h3>
           </div>
@@ -299,7 +299,7 @@
           </div>
         </div>
       </div>
-      <div class="home-contact white xl:px-28 px-16 text-center">
+      <div class="home-contact white xl:px-28 px-16 text-center pb-16">
         <div class="home-contact__content flex flex-col py-4">
           <div class="tittle-big mt-16 uppercase tracking-widest">
             <h3>contact</h3>
@@ -341,8 +341,23 @@
         </div>
       </div>
     </main>
-    <footer>
-
+    <footer class="flex justify-center">
+      <div class="footer-upper flex text-center">
+        <div class="footer-upper__content">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="footer-upper__social">
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <hr>
+      <div class="footer__bottom tittle-small">
+        © Copyright
+        <script>document.write(new Date().getFullYear())</script> Made by
+        <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/pchandia/">Pablo Chandia</a>
+      </div>
     </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
