--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" class="dark-mode">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pablo Chandia</title>
   </head>
@@ -359,6 +358,6 @@
         <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/pchandia/">Pablo Chandia</a>
       </div>
     </footer>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/portfolio/src/main.ts"></script>
   </body>
 </html>
