--- a/index.html
+++ b/index.html
@@ -358,6 +358,6 @@
         <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/pchandia/">Pablo Chandia</a>
       </div>
     </footer>
-    <script type="module" src="/portfolio/src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
