--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   learned over the years in <strong>Web Development</strong> so it
                   can help other people of the Dev Community. Feel free to Connect
                   or Follow me on my
-                  <a rel="noreferrer" href="https://linkedin.com/in/rammcodes" target="_blank">Linkedin</a>
+                  <a rel="noreferrer" href="https://www.linkedin.com/pchandia/" target="_blank">Linkedin</a>
                   where I post useful content related to Web Development and
                   Programming
                 </p>
@@ -358,6 +358,6 @@
         <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/pchandia/">Pablo Chandia</a>
       </div>
     </footer>
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
