--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="home-expertise__details mt-4 text-start flex flex-col basis-1/3">
                     <div class="relative rounded-xl overflow-auto p-8">
                       <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-slate-800 dark:highlight-white/5">
-                        <img class="absolute -left-6 w-24 h-24 white shadow-lg " src="/assets/img/devhaus-logo.svg">
+                        <img class="absolute -left-6 w-24 h-24 white shadow-lg " src="assets/img/devhaus-logo.svg">
                         <div class="flex flex-col py-5 pl-24">
                           <strong class="text-slate-900 text-sm font-medium dark:text-slate-200">Camp student</strong>
                           <span class="text-slate-500 text-sm font-medium dark:text-slate-400">Devhaus Leipzig, Germany</span>
