--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="home-expertise__details mt-4 text-start flex flex-col basis-1/3">
                   <div class="relative rounded-xl overflow-auto p-8">
                     <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-slate-800 dark:highlight-white/5">
-                      <img class="absolute -left-6 w-24 h-24 navy-darker shadow-lg border-2 border-black border-solid p-2 rounded-full" src="/assets/img/BRAINNEST.png">
+                      <img class="absolute -left-6 w-24 h-24 navy-darker shadow-lg border-2 border-black border-solid p-2 rounded-full" src="assets/img/BRAINNEST.png">
                       <div class="flex flex-col py-5 pl-24">
                         <strong class="text-slate-900 text-sm font-medium dark:text-slate-200">Camp student</strong>
                         <span class="text-slate-500 text-sm font-medium dark:text-slate-400">Brainnest, Germany</span>
@@ -269,7 +269,7 @@
                 <div class="home-expertise__details mt-4 text-start flex flex-col basis-1/3">
                 <div class="relative rounded-xl overflow-auto p-8">
                   <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-slate-800 dark:highlight-white/5">
-                    <img class="absolute -left-6 w-24 h-24 white shadow-lg border-2 border-black border-solid p-1" src="/assets/img/tcg.png">
+                    <img class="absolute -left-6 w-24 h-24 white shadow-lg border-2 border-black border-solid p-1" src="assets/img/tcg.png">
                     <div class="flex flex-col py-5 pl-24">
                       <strong class="text-slate-900 text-sm font-medium dark:text-slate-200">Front End Developer</strong>
                       <span class="text-slate-500 text-sm font-medium dark:text-slate-400">TCG Chile, Chile</span>
@@ -361,6 +361,6 @@
         <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/pchandia/">Pablo Chandia</a>
       </div>
     </footer>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
